Footer padding removed - No white space at bottom of page anymore Fixed the multiple fetch buttons Made the switch styles toggle work - Will make it look better later

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -34,7 +34,7 @@ canvas {
 }
 
 label{
-    color: white;
+    color: black;
 }
 
 li{
@@ -314,8 +314,7 @@ section {
 footer{
     bottom: 0;
     width: 100%;
-    background-color: #f1f4f7;
-    padding-top: 0.5vh;
+    background-color: #e5e5e5;
     color: black;
     text-align: center;
     z-index: 999;
